# Projects

03_ projects/Calories_BMR/: bmr_estimator.py  loseit_week_analyzer.py
03_ projects/Calories_BMR/Data/: 11-10-2025 2.numbers  11-10-2025.numbers  11-10-2025.xlsx  11-10-25.gsheet  daily_log.csv  weekly LoseIt.csv
03_ projects/Lifting_percentage/: percent_calc.py
Diet/: sample_calories 2.csv  sample_calories.csv  update_weight_history.py  weight_history 2.csv  weight_history.csv
Diet/simple-weight-importer/: README.md  pyproject.toml
Diet/simple-weight-importer/data/: sample_calories.csv
Diet/simple-weight-importer/src/: importer.py  main.py
Diet/simple-weight-importer/tests/: test_importer.py
Workout/: workout_history.py  workouts_log_(2025).tab
