[tool.poetry]
name = "simple-weight-importer"
version = "0.1.0"
description = "A simple program to import calorie data and update weight history."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"